--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#dashboard">DASHBOARD</a></li>
-        <li><a href="#sessionplan">SESSION PLAN</a></li>
-        <li><a href="#pugetpoints">PUGET POINTS</a></li>
-        <li><a href="#explore">LET'S EXPLORE</a></li>
-        <li><a href="#gears">SHIFTING GEARS</a></li>
-        <li><a href="#design">DESIGN THE JOURNEY</a></li>
+        <li><a href="https://pugetcec.github.io/sharepoint/">DASHBOARD</a></li>
+        <li><a href="https://pugetcec.github.io/sessionplan/">SESSION PLAN</a></li>
+        <li><a href="https://pugetcec.github.io/puget/">PUGET POINTS</a></li>
+        <li><a href="https://pugetcec.github.io/explore/">LET'S EXPLORE</a></li>
+        <li><a href="https://pugetcec.github.io/playground/">PLAYGROUND</a></li>
+        <li><a href="https://pugetcec.github.io/design/">DESIGN THE JOURNEY</a></li>
       </ul>
     </div>
   </div>
