--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 <div class="jumbotron text-center">
   <br><br><br>
   <img src="https://i.imgur.com/i5OowCI.png" width="400px">
-  <br><button class="btn btn-default btn-lg">GET STARTED >></button>
+  <br><a href="https://pugetcec.github.io/sessionplan/"><button class="btn btn-default btn-lg">GET STARTED >></button></a>
 </div>
 
 
